# rust-web3-developer-test-task

./: .gitignore  README.md
cli-block-hunter/: Cargo.toml  config.yaml
cli-block-hunter/src/: main.rs
cli-send-sol/: Cargo.toml  config.yaml
cli-send-sol/src/: main.rs
solana-program/: Cargo.toml  README.md  client.rs
solana-program-test/: Cargo.toml  README.md  example.env
solana-program-test/src/: main.rs
solana-program/src/: lib.rs
test-solana-program/: Cargo.toml
test-solana-program/src/: main.rs
wallets-balances/: Cargo.toml  config.yaml
wallets-balances/src/: main.rs
